fix: button left right slots gap

--- a/packages/void-ui/src/components/general/button/button.scss
+++ b/packages/void-ui/src/components/general/button/button.scss
@@ -356,13 +356,13 @@
   // slots
 
   @include elem-adjacent('loading', 'content') {
-    margin-left: $button-gap-icon-text;
+    margin-left: $button-gap-icon-text * 1em;
   }
   @include elem-adjacent('left', 'content') {
-    margin-left: $button-gap-icon-text;
+    margin-left: $button-gap-icon-text * 1em;
   }
   @include elem-adjacent('content', 'right') {
-    margin-left: $button-gap-icon-text;
+    margin-left: $button-gap-icon-text * 1em;
   }
 
   @include elem('loading', 'left', 'right') {
